v3.7.11 (XXXX-XX-XX)
--------------------

* Fix velocypack errors in cursor API in case an exception occurs while the
  cursor is being filled with data. In this case, the result could be in an
  arbitrary state (e.g. halfway produced), so adding more attributes to the
  result such as "error" and "code" was potentially unsafe. If the result was
  not properly built, trying to add "error" and "code" attributes could have led
  to arbitrary velocypack errors, which were then reported back to callers,
  masking the original error.
  Now the original error is returned, and no attempt is made to write into the
  result after an exception has occurred.

* Updated OpenSSL to 1.1.1k and OpenLDAP to 2.4.58.

* When using connections to multiple endpoints and switching between them,
  arangosh can now reuse existing connections by referring to an internal
  connection cache. This helps for arangosh scripts that repeatedly connect to
  multiple endpoints, and avoids wasting lots of ephemeral TCP ports remaining
  in CLOSE_WAIT state.
  This change is transparent to any arangosh scripts or commands that do not
  reconnect to other endpoints than the one specified at arangosh start.

* Fix a crash caused by returning a result produced by ANALYZER function.

* Fix implicit capture of views in a context of JS transaction.

* Use RebootTracker to abort cluster transactions on DB servers should the
  originating coordinator die or be rebooted. The previous implementation left
  the coordinator's transactions open on DB servers until they timed out there.
  Now, the coordinator's unavailability or reboot will be detected as early as
  it is reported by the agency, and all open transactions from that coordinator
  will be auto-aborted on DB servers.

* Fix an assertion failure that occurred when restoring view definitions from a
  cluster into a single server.

* Fixed Github issue #13665: Improve index selection when there are multiple
  candidate indexes.
